--- a/styles.css
+++ b/styles.css
@@ -21,3 +21,10 @@
 .foote {
     grid-area: footer;
 }
+
+.container {
+    display: grid;
+    margin: 0 2rem;
+    grid-template-columns: 2fr 6fr 4fr;
+    grid-gap: 2rem 1rem;
+}
