--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,28 @@
+* {
+    box-sizing: border-box;
+}
+
+html {
+    font-size: 16px;
+    font-family: Georgia, serif;
+}
+
+body {
+    background-color: #fbfbfb;
+}
+
+h1, h2, h3 {
+    margin-top: 0;
+}
+
+header h1 {
+    margin: 0;
+}
+
+main p {
+    margin-bottom: 0;
+}
+
 .logo {
     grid-area: logo;
 }
